     current task is done, a new task is created automatically only if the new
     due date does not exceed the value of `until`
  *  When creating a task with `until` tag, relative values are supported.
     E.g, `due:2025-10-20 rec:1w until:2m text` creates a task that repeats
     every week while new due date is less than or equal to `2025-12-20`.

 -- Vladimir Markelov <vmatroskin@gmail.com>  Tue, 29 Apr 2025 20:05:35 -0700

ttdl (4.10.0) unstable; urgency=medium

  *  New command-line flag `--max` - it limits the number of displayed task

 -- Vladimir Markelov <vmatroskin@gmail.com>  Tue, 29 Apr 2025 20:05:35 -0700

ttdl (4.9.0) unstable; urgency=medium

  *  New command "listhashtags" (with shortcuts "listhash" and "lh"). The
     command prints out all hashtags used in tasks. It is similar to
     existing "lp" and "lc" which list projects and contexts respectively.

 -- Vladimir Markelov <vmatroskin@gmail.com>  Wed, 12 Feb 2025 18:42:32 -0800

ttdl (4.8.0) unstable; urgency=medium

  *  New special dates are available when setting due and other dates. The new
     special dates are names of months. You can use short (3 first letters) or
     full month names. After substitution a month name is replaced with the
     first day of the month. Note that the date is always in the future. In
     other words, if you set 'due:dec' on the December 1st, the due date will
     be December 1st of the next year

 -- Vladimir Markelov <vmatroskin@gmail.com>  Fri, 17 Jan 2025 19:01:10 -0800

ttdl (4.7.0) unstable; urgency=medium

  *  New command-line options `--init` and `--init-local` to create a default
     configuration file in the user's configuration or the current working
     directory respectively.

 -- Vladimir Markelov <vmatroskin@gmail.com>  Mon, 25 Nov 2024 11:03:41 -0800

ttdl (4.6.0) unstable; urgency=medium

  *  New command-line option `--interactive`/`-i` for command `edit`. When it